--- a/foodie-cloud/order/common/pom.xml
+++ b/foodie-cloud/order/common/pom.xml
@@ -84,5 +84,11 @@
             <artifactId>fastjson</artifactId>
             <version>1.2.58</version>
         </dependency>
+
+        <dependency>
+            <groupId>com.qinpiyi.common</groupId>
+            <artifactId>common-spring-boot-starter</artifactId>
+            <version>0.0.4</version>
+        </dependency>
     </dependencies>
 </project>
