--- a/foodie-cloud/eureka/src/main/resources/application-ip.yml
+++ b/foodie-cloud/eureka/src/main/resources/application-ip.yml
@@ -1,15 +1,15 @@
 eureka:
   instance:
-    prefer-ip-address: false
-    hostname: eureka3 #在系统的hosts文件中配置eureka1映射到127.0.0.1
+    prefer-ip-address: true
+    instance-id: ${spring.cloud.client.ip-address}:${server.port}
+    hostname: ${spring.cloud.client.ip-address}
+    ip-address: 127.0.0.1
   client:
-    service-url:
-      defaultZone: http://eureka1:8100/eureka/,http://eureka2:8200/eureka/,http://eureka3:8300/eureka/
     register-with-eureka: true #使用Eureka集群时，保险起见设置为true
+    service-url:
+      defaultZone: http://127.0.0.1:8100/eureka/,http://192.168.1.117:8200/eureka/
   server:
     enable-self-preservation: true #EurekaServer自我保护，开发环境下可关闭，生产环境下应开启(true)
 spring:
   application:
     name: eureka
-#server:
-#  port: 8100
