--- a/foodie-cloud/product/client/pom.xml
+++ b/foodie-cloud/product/client/pom.xml
@@ -17,6 +17,10 @@
     <dependencies>
         <dependency>
             <groupId>org.springframework.cloud</groupId>
+            <artifactId>spring-cloud-starter-openfeign</artifactId>
+        </dependency>
+        <dependency>
+            <groupId>org.springframework.cloud</groupId>
             <artifactId>spring-cloud-netflix-core</artifactId>
         </dependency>
         <dependency>
