--- a/foodie-cloud/product/server/pom.xml
+++ b/foodie-cloud/product/server/pom.xml
@@ -58,6 +58,12 @@
             <groupId>com.dmcq</groupId>
             <artifactId>product-common</artifactId>
         </dependency>
+        <dependency>
+            <groupId>junit</groupId>
+            <artifactId>junit</artifactId>
+            <version>4.12</version>
+            <scope>test</scope>
+        </dependency>
     </dependencies>
 
     <build>
