--- a/foodie-cloud/order/pom.xml
+++ b/foodie-cloud/order/pom.xml
@@ -16,7 +16,7 @@
 
     <properties>
         <java.version>1.8</java.version>
-        <spring-cloud.version>Finchley.BUILD-SNAPSHOT</spring-cloud.version>
+        <spring-cloud.version>Finchley.M3</spring-cloud.version>
         <order-common.version>0.0.1-SNAPSHOT</order-common.version>
         <product-client.version>0.0.1-SNAPSHOT</product-client.version>
     </properties>
@@ -24,7 +24,7 @@
     <parent>
         <groupId>org.springframework.boot</groupId>
         <artifactId>spring-boot-starter-parent</artifactId>
-        <version>2.0.0.BUILD-SNAPSHOT</version>
+        <version>2.0.0.M3</version>
         <relativePath/> <!-- lookup parent from repository -->
     </parent>
     <dependencyManagement>
