--- a/foodie-cloud/product/pom.xml
+++ b/foodie-cloud/product/pom.xml
@@ -17,14 +17,14 @@
 
     <properties>
         <java.version>1.8</java.version>
-        <spring-cloud.version>Finchley.BUILD-SNAPSHOT</spring-cloud.version>
+        <spring-cloud.version>Finchley.M3</spring-cloud.version>
         <product-common.version>0.0.1-SNAPSHOT</product-common.version>
     </properties>
 
     <parent>
         <groupId>org.springframework.boot</groupId>
         <artifactId>spring-boot-starter-parent</artifactId>
-        <version>2.0.0.BUILD-SNAPSHOT</version>
+        <version>2.0.0.M3</version>
         <relativePath/> <!-- lookup parent from repository -->
     </parent>
     <dependencyManagement>
