--- a/foodie-cloud/product/server/src/main/resources/application.yml
+++ b/foodie-cloud/product/server/src/main/resources/application.yml
@@ -1,7 +1,7 @@
 eureka:
   client:
     service-url:
-      defaultZone: http://localhost:8761/eureka/
+      defaultZone: http://localhost:8100/eureka/,http://localhost:8200/eureka/,http://localhost:8300/eureka/
 
 spring:
   application:
@@ -13,5 +13,5 @@ spring:
     url: jdbc:mysql://127.0.0.1:3306/springcloud-sell?characterEncoding=utf-8&useSSL=false
   jpa:
     show-sql: true
-server:
-  port: 9012
+#server:
+#  port: 8102
