--- a/foodie-cloud/order/server/src/main/resources/application.yml
+++ b/foodie-cloud/order/server/src/main/resources/application.yml
@@ -1,6 +1,44 @@
-spring:
-  rabbitmq:
-    host: localhost
-    port: 5672
-    username: guest
-    password: guest
+#spring:
+#  application:
+#    name: order
+#  datasource:
+#    driver-class-name: com.mysql.cj.jdbc.Driver
+#    username: root
+#    password: 123456
+#    url: jdbc:mysql://127.0.0.1:3306/springcloud-sell?characterEncoding=utf-8&useSSL=false
+#  jpa:
+#    show-sql: true
+#  rabbitmq:
+#    host: localhost
+#    port: 5672
+#    username: guest
+#    password: guest
+#    connection-timeout: 15000
+#  cloud:
+#    stream:
+#      bindings:
+#        myMessage:
+#          group: order
+#          content-type: application/json
+#
+#mybatis:
+#  type-aliases-package: com.dmcq.order.domain.entity
+#  mapper-locations: classpath:mapper/*.xml
+#  mappers: com.dmcq.order.common.mapper.MyBaseMapper
+#  not-empty: false
+#  identity: MYSQL
+#
+#server:
+#  port: 8103
+#
+# logging:
+#   path: log
+#   file: order.log
+#   level: info
+#
+#env:
+#  dev
+#
+#girl:
+#  name: lily
+#  age: 25
