--- a/foodie-cloud/config/pom.xml
+++ b/foodie-cloud/config/pom.xml
@@ -14,6 +14,7 @@
     <version>0.0.1-SNAPSHOT</version>
     <name>config</name>
     <description>Config server</description>
+    <packaging>jar</packaging>
 
     <dependencies>
         <dependency>
@@ -40,5 +41,27 @@
             <artifactId>spring-cloud-config-monitor</artifactId>
         </dependency>
     </dependencies>
+
+    <build>
+        <plugins>
+            <plugin>
+                <groupId>org.apache.maven.plugins</groupId>
+                <artifactId>maven-surefire-plugin</artifactId>
+                <version>2.18.1</version>
+                <configuration>
+                    <!--true跳过测试-->
+                    <skipTests>true</skipTests>
+                </configuration>
+            </plugin>
+
+            <plugin>
+                <groupId>org.springframework.boot</groupId>
+                <artifactId>spring-boot-maven-plugin</artifactId>
+                <configuration>
+                    <fork>true</fork>
+                </configuration>
+            </plugin>
+        </plugins>
+    </build>
 
 </project>
