--- a/foodie-cloud/order/server/src/main/resources/bootstrap.yml
+++ b/foodie-cloud/order/server/src/main/resources/bootstrap.yml
@@ -3,7 +3,7 @@ eureka:
     status-page-url: http://${spring.cloud.client.ip-address}:${server.port}/swagger-ui.html
   client:
     service-url:
-      defaultZone: http://localhost:8100/eureka/   # ,http://localhost:8200/eureka/,http://localhost:8300/eureka/
+      defaultZone: http://106.13.117.203:8100/eureka/   # ,http://localhost:8200/eureka/,http://localhost:8300/eureka/
 
 spring:
   application:
@@ -15,3 +15,9 @@ spring:
         service-id: config
       profile: dev     # 环境
 #      label: develop   # 分支
+
+#配置Actuator健康检查
+management:
+  endpoint:
+    health:
+      show-details: always
