--- a/foodie-cloud/product/server/src/main/resources/bootstrap.yml
+++ b/foodie-cloud/product/server/src/main/resources/bootstrap.yml
@@ -1,9 +1,10 @@
 eureka:
   instance:
+    prefer-ip-address: true
     status-page-url: http://${spring.cloud.client.ip-address}:${server.port}/swagger-ui.html
   client:
     service-url:
-      defaultZone: http://localhost:8100/eureka/ # ,http://localhost:8200/eureka/,http://localhost:8300/eureka/
+      defaultZone: http://106.13.117.203:8100/eureka/,http://106.13.117.203:8200/eureka/
 
 spring:
   application:
@@ -15,4 +16,5 @@ spring:
         service-id: config
       profile: dev     # 环境
 #      label: develop   # 分支
+
 
